--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "qrcode.react": "^1.0.1",
     "ra-data-json-server": "^3.18.2",
     "react": "^17.0.2",
     "react-admin": "^3.18.2",
